[package]
name = "rdns"
version = "0.1.0"
authors = ["Vinayak Goyal <vinayk@purelydysfunctional.com>"]
edition = "2024"
rust-version = "1.91"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
thiserror = "1.0.38"                             # error handling
tokio = { version = "1.49.0", features = ["full"] }
prometheus = "0.13"
warp = "0.3"
lazy_static = "1.4"
reqwest = { version = "0.13", features = ["json"] }
ratatui = "0.30.0"
crossterm = "0.29.0"
sysinfo = "0.38.0"
chrono = "0.4.43"
clap = { version = "4.5.54", features = ["derive"] }
